--- a/app/views/templates/_upload.html.erb
+++ b/app/views/templates/_upload.html.erb
@@ -28,9 +28,9 @@
   </div>
   <div class="btnUploadWrap">
     <span><%= submit_tag 'Preview', :id=>"preview", :value=>"Upload",:class=>"btnAction" %></span>
-    <% if !!template.audio_link || @preview || @save %>
-      <span><%= submit_tag 'Save', :id=>"save", :class=>"btnAction" %></span>
-    <% end %>
+    <%# if !!template.audio_link || @preview || @save %>
+      <!-- span><%= submit_tag 'Save', :id=>"save", :class=>"btnAction" %></span -->
+    <%# end %>
     <span><%= submit_tag 'Cancel', :id=>"cancel", :class=>"btnAction" %></span>
   </div>
   <div class="clear">
