add column headings

--- a/app/views/moderation/_search_results.html.erb
+++ b/app/views/moderation/_search_results.html.erb
@@ -11,7 +11,7 @@ To save the order, click the checkbox of the items and click Save
 <%= paginate @results %>
 <thead>
       <tr>
-        <th></th>
+        <th>Order</th>
         <th>Message</th>
         <th><a id="branches.name">Branch</a></th>
         <th><a id="entries.created_at">Date</a></th>
@@ -19,7 +19,7 @@ To save the order, click the checkbox of the items and click Save
         <th>SoundCloud</th>
         <th>Akamai</th>
         <th>Widget</th>
-        <th></th>
+        <th>Action</th>
         <th><a id="countries.name">Country/Location</a></th>
         <th><a id="branches.contact">Contact</a></th>
       </tr>
