--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -12,7 +12,7 @@
     <%= submit_tag 'Create Branch', :id=>"create", :class=>"create-branch ZbtnAction" %>&nbsp;&nbsp;
     <%= submit_tag 'Delete Branch', :id=>"delete", :class=>"create-branch" %>
   </div>
-  <div id="new-branch" class="float-left"></div>
+  <div id="new-branch" class="float-left helpPopUp"></div>
   <p id="return-msg" class="notice"></p>
 
   <p>
