--- a/app/views/moderation/_search_results.html.erb
+++ b/app/views/moderation/_search_results.html.erb
@@ -20,7 +20,7 @@ To save the order, click the checkbox of the items and click Save
         <th><a id="entries.created_at">Date</a></th>
         <th>Dropbox</th>
         <th>SoundCloud</th>
-        <th>Akamai</th>
+        <th>FTP</th>
         <th>Widget</th>
         <th>Action</th>
         <th><a id="countries.name">Country/Location</a></th>
@@ -49,16 +49,16 @@ To save the order, click the checkbox of the items and click Save
      syndicate="<a id='S#{eid}' data-url='/moderation/#{eid}/edit/?syndicate=1'>Syndicate</a>".html_safe
      palylist = ''   
    end
-   if entry.akamai_url
-     akamai="<a href='#{entry.akamai_url}' onclick=\"OpenWin('#{entry.akamai_url}');return  false;\">Akamai</a>".html_safe
+   if entry.ftp_url
+     akamai="<a href='#{entry.ftp_url}' onclick=\"OpenWin('#{entry.ftp_url}');return  false;\">FTP</a>".html_safe
    else
-     akamai = "<a id='P#{eid}' data-url='/moderation/#{eid}/edit/?akamai=1'>Akamai</a>".html_safe
+     akamai = "<a id='P#{eid}' data-url='/moderation/#{eid}/edit/?akamai=1'>FTP</a>".html_safe
    end
    
    title1 = !entry.is_private ? 'Message is public' : 'Make Dropbox file public' 
    title1 = "#{eid} #{title1}"
    title2 = !!entry.soundkloud ? 'Message is in SoundCloud' : 'Syndicate Dropbox file to SoundCloud' 
-   title3 = entry.akamai_url ? 'Message is in Akamai' : 'FTP to Akamai' 
+   title3 = entry.ftp_url ? 'Message is in FTP server' : 'FTP upload' 
 %>
 <tr id="<%= eid %>">
    <td>
