MM-274 #modified:   app/controllers/analytics_controller.rb

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -1,4 +1,4 @@
-<div id="branch" class="module branch-configuration">
+<div id="branch" class="Amodule branch-configuration-body">
   <h2>Branch Configuration</h2>
   <div class="select-branch">
     <h4>Select Branch</h4>
