--- a/app/views/healthcheck/index.html.erb
+++ b/app/views/healthcheck/index.html.erb
@@ -2,10 +2,11 @@
   <style></style>
   <div id="modal-window" class="helpPopUp"></div>
 <% end %>
-
+<div class="branch-configuration-body">
 <h2>Health Check</h2>
 <%#= render :partial => 'shared/google_map' %>
 <%= render :partial => 'search' %>
+</div>
 <script>
 	 jQuery(document).ready(function(){
      search.init();
