--- a/app/views/layouts/moderation.html.erb
+++ b/app/views/layouts/moderation.html.erb
@@ -30,19 +30,14 @@
 
       <!--Module is the container class of the right content area. I've added the moderation class to this div in case there are specific styles we need to add for these screens only. -->            
 		   <div class="module <%= @controller %>">
-         <div class="content" id="content">
-				 <!--
-				 <p class="notice">
-          <%= notice %>
-         </p>
-         <p class="alert">
-          <%= alert %>
-        </p> -->
-          <%= yield %>
-        </div>
-	  </div><!-- End Module --> 
-
-	</div><!-- End Wrapper --> 
+		     <div class="controls">
+             <%= render :partial=>'shared/header' %>
+           </div>
+           <div class="content" id="content">
+             <%= yield %>
+           </div>
+	      </div><!-- End Module -->
+	 </div><!-- End Wrapper --> 
 
 <!--This is the script to make the tabs work. It must be included right before the end body tag.-->
 <script type="text/javascript">
