--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,10 @@
   <head>
     <title>BBG IVR</title>
     <!-- <META HTTP-EQUIV="refresh" CONTENT="600" /> -->
-		<%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag 'application.js' %>
-    <%#= javascript_include_tag 'main.js' %>
     <%= stylesheet_link_tag "all" %>
-				<%= stylesheet_link_tag('print', :media => :print) %>
+    <%= stylesheet_link_tag('print', :media => :print) %>
     <%= csrf_meta_tags %>
     <%= yield :head %>
   </head>
@@ -20,18 +19,19 @@
       <!-- End Left side nav --><!--Module is the container class of the right content area -->
       <div class="module <%= @controller %>">
       	
-							<% if @controller == 'home' %>
+		  <% if @controller == 'home' || @controller == 'analytics' || 
+		      @controller == 'healthcheck' %>
         <!--Start Branch Caller and Activity Area-->
         <div class="controls">
           <%= render :partial=>'shared/header' %>
         </div>
         <!--End Branch Caller and Activity Area-->
-								<% elsif @controller == 'healthcheck' %>
-								   <%= render :partial=>'remote_access'%>
-								<% end %>
-								<!-- Put your map tool here. -->
-								<div class="content" id="content">
-									<p class="notice">
+		  <% elsif @controller == 'healthcheck' %>
+		    <%= render :partial=>'remote_access'%>
+		  <% end %>
+		  <!-- Put your map tool here. -->
+		  <div class="content" id="content">
+			<p class="notice">
           <%= notice %>
          </p>
          <p class="alert">
@@ -40,13 +40,13 @@
           <%= yield %>
         </div>
 								
-								<% if @controller == 'home' %>
-								<!-- Start Activity area. This area set to have a top margin of 20px. -->
+		 <% if @controller == 'home' %>
+		  <!-- Start Activity area. This area set to have a top margin of 20px. -->
         <div class="activity">
            <%= render :partial=>'shared/activity' %>			
         </div>
         <!-- End Activity area -->
-								<% end %>
+		  <% end %>
       </div>
       <!-- End Module -->
     </div>
