--- a/app/views/layouts/branch.html.erb
+++ b/app/views/layouts/branch.html.erb
@@ -22,9 +22,11 @@
         <%= render :partial=>'shared/side_nav' %>
       </nav>
       <!-- End Left side nav --><!--Module is the container class of the right content area -->
-      <div class="module">
-				<!-- Put your map tool here. -->
-				<div class="content" id="content">
+      <div class="module <%= @controller %>">
+        <div class="controls" >
+          <%= render :partial=>'shared/header' %>
+        </div>
+		  <div class="content" id="content">
            <p class="alert"><%= alert %></p>
            <%= yield %>
         </div>
@@ -36,7 +38,7 @@
     <script>
       jQuery(document).ready(function(){
           homePage.init("content");
-        //  autoRefreshHeader.init();
+          autoRefreshHeader.init();
           blinkeffect('img.red-light');
       });
     </script>
