--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -5,9 +5,13 @@
   <%= render :partial => @temp_partial %>
 </div>
 <div id="forum-upload" class="float-left"></div>
+
+<% if @branch.forum_type=="report" %>
 <div id="report-upload" class="helpPopUp" style="display:none;">
   <%= render :partial=>'upload_report' %>
 </div>
+<% end %>
+
 <div id="moderate-div" class="helpPopUp float-left">
   <%#= render :partial=>'/shared/sortable' %>
   <div style="width: 700px" class="template-popup">
