--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -15,6 +15,7 @@
   <div id="new-branch" class="float-left helpPopUp"></div>
   <p id="return-msg" class="notice"></p>
 
+  <%# commented out
   <p>
   <a id="go-template" class="go-template" href="/templates">Edit Forum</a>
   <span id="go-template-hint" class="go-template-hint"></span>
@@ -22,6 +23,8 @@
   <p>
   <a id="go-template-result" class="go-template" href="/templates?result=1&branch=Accra">Edit Forum Result</a>
   </p>
+  %>
+  
   <h3>Select Forum Type</h3>
   <div id="TabbedPanels1" class="TabbedPanels">
     <ul class="TabbedPanelsTabGroup">
