for headline template create

--- a/app/views/shared/_audio_player.html.erb
+++ b/app/views/shared/_audio_player.html.erb
@@ -1,5 +1,6 @@
 <% if @branch %>
 <div>
+  <h2>Preview Voice Forum</h2>
   <% audios = audio_players(@branch) %>
    <% audios.each do |a| %>
      <span><b><%= a[0] %></b></span>
