preview voice forum route

--- a/app/views/branch/_activate_forum.html.erb
+++ b/app/views/branch/_activate_forum.html.erb
@@ -1,3 +1,4 @@
+<style></style>
 <div id="activate-forum-div" class="">
   <div class='notice'>
     <%= flash[:notice] %>
@@ -22,8 +23,3 @@
     <span><%= submit_tag 'Cance',:id=>"cancel",:class=>"btnAction" %></span>
   </div>
 </div>
-<script>
-  $(document).ready(function () { 
-  
-  });
-</script>
