--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -15,7 +15,7 @@
   <div id="new-branch" class="float-left helpPopUp"></div>
   <p id="return-msg" class="notice"></p>
 
-  <%# commented out
+  
   <p>
   <a id="go-template" class="go-template" href="/templates">Edit Forum</a>
   <span id="go-template-hint" class="go-template-hint"></span>
@@ -23,7 +23,7 @@
   <p>
   <a id="go-template-result" class="go-template" href="/templates?result=1&branch=Accra">Edit Forum Result</a>
   </p>
-  %>
+
   
   <h3>Select Forum Type</h3>
   <div id="TabbedPanels1" class="TabbedPanels">
@@ -42,17 +42,28 @@
       <li id="bulletin" class="TabbedPanelsTab syndicate" tabindex="0">
         <a href="#"><%= Branch.forum_type_ui('bulletin') %></a>
       </li>
-      <li style="height:60px;border-left: 1px solid #CCC;"></li>
+      <li class="vertical-line"></li>
       <li id="active-forum" class="TabbedPanelsTab syndicate" tabindex="0" data-url="">
         <a href="#">Activate Forum</a>
       </li>
+      
+      <li id="privew-voice-forum" class="TabbedPanelsTab syndicate" tabindex="0" data-url="/branch/preview_forum">
+        <a href="#">Privew Voice Forum</a>
+      </li>
+      <!--
+      <li id="syndicate-voice-forum" class="TabbedPanelsTab syndicate" tabindex="0" data-url="/branch/syndicate">
+        <a href="#">Syndicate Voice Forum</a>
+      </li>
+      -->
     </ul>
   </div>
-  <div id="audio-player-div" class="float-left"></div>
+  <div id="search-results" class="float-left helpPopUp"></div>
+  <div id="audio-player-div" class="float-left helpPopUp"></div>
   <div id="forum-audio-upload" class="float-left forum-upload helpPopUp"></div>
   <div id="forum-activate" class="float-left helpPopUp" style="display:none;">
     <%= render :partial=>'activate_forum' %>
   </div>
+  <div id="syndicate-forum-soundlcloud" class="float-left helpPopUp" style="display:none;"></div>
   <div>
   <%# @branch = Branch.find(13) if !@branch %>
      <%#= render :partial=>'/shared/sortable' if @branch %>
