--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -6,11 +6,13 @@
 </div>
 <div id="forum-upload" class="float-left"></div>
 
-<% if @branch.forum_type=="report" %>
-<div id="report-upload" class="helpPopUp" style="display:none;">
-  <%= render :partial=>'upload_report' %>
+<!--
+<%# if @branch.forum_type=="report" %>
+<div id="report-upload" class="helpPopUp" style="margin: 10px;">
+  <%#= render :partial=>'upload_report' %>
 </div>
-<% end %>
+<%# end %>
+-->
 
 <div id="moderate-div" class="helpPopUp float-left">
   <%#= render :partial=>'/shared/sortable' %>
