--- a/app/views/layouts/branch.html.erb
+++ b/app/views/layouts/branch.html.erb
@@ -13,6 +13,7 @@
     <script src="/jquery.mb.miniAudioPlayer-1.7.1/inc/jquery.mb.miniPlayer.js?body=1" type="text/javascript"></script>
     <link href="/jquery.mb.miniAudioPlayer-1.7.1/css/miniplayer.css?body=1" media="screen" rel="stylesheet" type="text/css" />
     <%= csrf_meta_tags %>
+
     <%= yield :head %>
   </head>
   <body>
@@ -38,7 +39,7 @@
     <script>
       jQuery(document).ready(function(){
           homePage.init("content");
-          autoRefreshHeader.init();
+       //   autoRefreshHeader.init();
           blinkeffect('img.red-light');
       });
     </script>
